refactor(timestamp): completed refactoring to new Task/TaskWorker pattern

--- a/fit_acquisition/lang/en.json
+++ b/fit_acquisition/lang/en.json
@@ -21,6 +21,7 @@
     "MALFORMED_URL_ERROR": "Malformed URL: missing Network Location part.",
     "NO_DNS_RESPONSE": "No DNS response for {}",
     "HTTP_CONNECTION_ERROR": "Error during the HTTP request!\nSee bellow for more detail.",
+    "FILE_WRITE_ERROR": "File read/write error!\nSee details below.",
     "HEADERS": "Html Headers",
     "HEADERS_STARTED": "HEADERS started",
     "HEADERS_COMPLETED": "HEADERS completed",
@@ -132,6 +133,8 @@
     "TIMESTAMP_STARTED": "TIMESTAMP started",
     "TIMESTAMP_COMPLETED": "TIMESTAMP completed",
     "TIMESTAMP_APPLY": "{}: Apply timestamp to {} from server {}",
+    "TIMESTAMP_ERROR_TITLE": "Timestamp Error",
+    "TIMESTAMP_EXECUTION_ERROR": "An error occurred during timestamp execution.\nMore details below.",
     "PEC_AND_DOWNLOAD_EML": "PEC and EML file",
     "PEC": "Send the PDF Report by PEC",
     "EML": "Download eml file",
