--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -21,6 +21,7 @@
     "MALFORMED_URL_ERROR": "URL malformato: manca la parte di localizzazione della rete (netloc).",
     "NO_DNS_RESPONSE": "Nessuna risposta DNS per {}",
     "HTTP_CONNECTION_ERROR": "Errore durante la richiesta HTTP!\nDi seguito maggiori dettagli.",
+    "FILE_WRITE_ERROR": "Errore di lettura/scrittura file!\nDi seguito maggiori dettagli.",
     "HEADERS": "HEADERS",
     "HEADERS_STARTED": "Inizio acquisizione HEADERS",
     "HEADERS_COMPLETED": "Acquisizione HEADERS completata",
@@ -132,6 +133,8 @@
     "TIMESTAMP_STARTED": "Inizio calcolo marca temporale",
     "TIMESTAMP_COMPLETED": "Calcolo marca temporale  completato",
     "TIMESTAMP_APPLY": "{}: Applicata marca temporale al file {} dal server {}",
+    "TIMESTAMP_ERROR_TITLE": "Errore Timestamp",
+    "TIMESTAMP_EXECUTION_ERROR": "Errore nell’esecuzione del timestamp.\nDi seguito maggiori dettagli.",
     "PEC_AND_DOWNLOAD_EML": "PEC e file EML",
     "PEC": "Invia il report PDF via PEC",
     "EML": "Scarica file eml",
