feat(acquisition): log NTP or system time in acquisition events
- Refactored logging for start/stop/end of acquisition
- Uses NTP time when available, fallback to system time
- Updated translations (en, it) with appropriate labels
- Bumped fit-common to 0.1.20 and updated dependencies

--- a/fit_acquisition/lang/en.json
+++ b/fit_acquisition/lang/en.json
@@ -3,10 +3,12 @@
     "TASK_IS_COMPLETED": "{} completed with status {}",
     "ACTIVE_TASKS_HEADER": "Active tasks:\n",
     "NO_ACTIVE_TASKS": "✅ No active tasks.",
-    "ACQUISITION_STARTED" : "Acquisition started",
-    "ACQUISITION_STOPPED" : "Acquisition stopped",
-    "ACQUISITION_FINISHED" : "Acquisition finished",
+    "ACQUISITION_STARTED" : "Acquisition started.",
+    "ACQUISITION_STOPPED" : "Acquisition stopped.",
+    "ACQUISITION_FINISHED" : "Acquisition finished.",
     "NTP_ACQUISITION_TIME" : "NTP {} acquisition time: {}",
+    "NTP_TIME": "NTP Time:",
+    "OS_TIME": "System Time:",
     "PACKET_CAPTURE": "Packet Capture",
     "NETWORK_PACKET_CAPTURE_STARTED": "Network packet capture started",
     "NETWORK_PACKET_CAPTURE_STOPPED": "Network packet capture stopped",
