--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -3,10 +3,12 @@
     "TASK_IS_COMPLETED": "{} completato con stato {}",
     "ACTIVE_TASKS_HEADER": "Task attivi:\n",
     "NO_ACTIVE_TASKS": "✅ Nessun task attivo.",
-    "ACQUISITION_STARTED": "Acquisizione avviata",
-    "ACQUISITION_STOPPED": "Acquisizione interrotta",
-    "ACQUISITION_FINISHED": "Acquisizione completata",
+    "ACQUISITION_STARTED": "Acquisizione avviata.",
+    "ACQUISITION_STOPPED": "Acquisizione interrotta.",
+    "ACQUISITION_FINISHED": "Acquisizione completata.",
     "NTP_ACQUISITION_TIME": "Ora di acquisizione NTP {}: {}",
+    "NTP_TIME" : "Ora NTP:",
+    "OS_TIME" : "Ora del sistema:",
     "PACKET_CAPTURE": "CATTURA PACCHETTI",
     "NETWORK_PACKET_CAPTURE_STARTED": "Acquisizione pacchetti di rete avviata",
     "NETWORK_PACKET_CAPTURE_STOPPED": "Acquisizione pacchetti di rete interrotta",
