feat(acquisition): export FIT system environment variables with localized labels
Add support in `Acquisition` to write FIT system environment variables to `system_info.txt`
inside the acquisition directory, using translated labels from language resources.

- add `__fit_system_environment_variables` mapping in `Acquisition`
- add `write_fit_system_environment_variables()` to persist `label: value` lines
- skip variables that are not set in the current environment
- add missing translation keys in `fit_acquisition/lang/en.json`
- add corresponding Italian translation keys in `fit_acquisition/lang/it.json`

--- a/fit_acquisition/lang/en.json
+++ b/fit_acquisition/lang/en.json
@@ -76,6 +76,16 @@
     "GENERATE_PDF_REPORT": "Generate PDF Report",
     "GENERATE_PDF_REPORT_STARTED": "Generate PDF Report started",
     "GENERATE_PDF_REPORT_COMPLETED": "{}: Generate PDF Report completed",
+    "FIT_VERSION": "FIT Version",
+    "FIT_USER_APP_PATH": "FIT User App Path",
+    "FIT_LOG_APP_PATH": "FIT Log App Path",
+    "FIT_OS_TYPE": "Operating System Type",
+    "FIT_OS_VERSION": "Operating System Version",
+    "FIT_USERNAME": "Username",
+    "FIT_HOST_IP": "Host IP Address",
+    "FIT_DNS": "DNS Servers",
+    "FIT_MITM_PORT": "MITM Port",
+    "FIT_USER_SYSTEM_LANG": "System Language",
     "ACQUISITION_DATE": "Acquisition Date",
     "ACQUISITION_TYPE": "Acquisition Type",
     "AVID": "Video Acquisition",
