--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -76,6 +76,16 @@
     "GENERATE_PDF_REPORT": "Creazione Report PDF",
     "GENERATE_PDF_REPORT_STARTED": "Inizio Creazione Report PDF",
     "GENERATE_PDF_REPORT_COMPLETED": "{}: Creazione Report PDF completata",
+    "FIT_VERSION": "Versione di FIT",
+    "FIT_USER_APP_PATH": "Percorso app utente FIT",
+    "FIT_LOG_APP_PATH": "Percorso log applicazione FIT",
+    "FIT_OS_TYPE": "Tipo di sistema operativo",
+    "FIT_OS_VERSION": "Versione del sistema operativo",
+    "FIT_USERNAME": "Nome utente",
+    "FIT_HOST_IP": "Indirizzo IP host",
+    "FIT_DNS": "Server DNS",
+    "FIT_MITM_PORT": "Porta MITM",
+    "FIT_USER_SYSTEM_LANG": "Lingua di sistema utente",
     "ACQUISITION_DATE": "Data acquisizione",
     "ACQUISITION_TYPE": "Tipo di acquisizione",
     "AVID": "Acquisizione video",
