feat(acquisition): add FIT_PUBLIC_IP to report variables with EN/IT labels
Expose `FIT_PUBLIC_IP` in the acquisition variable list and add its localized label in `en.json` and `it.json`.

--- a/fit_acquisition/lang/en.json
+++ b/fit_acquisition/lang/en.json
@@ -76,6 +76,7 @@
     "GENERATE_PDF_REPORT": "Generate PDF Report",
     "GENERATE_PDF_REPORT_STARTED": "Generate PDF Report started",
     "GENERATE_PDF_REPORT_COMPLETED": "{}: Generate PDF Report completed",
+    "FIT_PUBLIC_IP": "Public IP Address",
     "FIT_VERSION": "FIT Version",
     "FIT_USER_APP_PATH": "FIT User App Path",
     "FIT_LOG_APP_PATH": "FIT Log App Path",
