--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -87,65 +87,78 @@
     "FIT_DNS": "Server DNS",
     "FIT_MITM_PORT": "Porta MITM",
     "FIT_USER_SYSTEM_LANG": "Lingua di sistema utente",
+    "DOCUMENT_TITLE": "Freezing Internet Tool",
+    "APPLICATION_SHORT_NAME": "FIT",
+    "DOCUMENT_SUBTITLE": "Report Freezing Internet Tool",
+    "SECTION_DESCRIPTION_FIT_APPLICATION": "FIT Project (Freezing Internet Tool) è una suite modulare di applicazioni sviluppate in linguaggio Python, progettata per l’acquisizione forense di contenuti disponibili online, quali pagine web, comunicazioni e-mail e contenuti provenienti da piattaforme di social media. La suite è composta da moduli indipendenti, ciascuno dedicato a uno specifico tipo di acquisizione, che possono essere eseguiti singolarmente oppure in modo integrato come parte dell’intero sistema.<br>FIT è un software FLOSS (Free/Libre and Open Source Software), il cui codice sorgente è pubblicamente disponibile e utilizzabile secondo i termini della relativa licenza open source. Tale caratteristica consente la verifica del funzionamento dello strumento, nonché la sua adattabilità alle specifiche esigenze operative del contesto forense. FIT può essere scaricato al seguente link: {}.<br><br>Nel contesto dell’informatica forense, uno strumento di acquisizione forense è un software progettato per la raccolta controllata di dati digitali da fonti informatiche o servizi online, con l’obiettivo di documentare contenuti e informazioni rilevanti per finalità di analisi tecnica o probatoria. In tale ambito, strumenti come FIT consentono di acquisire contenuti digitali preservandone il contesto e le informazioni accessorie, rendendo i dati raccolti verificabili e utilizzabili nell’ambito di attività investigative, consulenze tecniche o procedimenti legali.",
+    "SECTION_TITLE_DIGITAL_FORENSICS": "Digital Forensics",
+    "SECTION_DESCRIPTION_DIGITAL_FORENSICS": "La digital forensics è l'applicazione scientifica e tecnologica dei principi  forensi alla raccolta, conservazione, analisi e presentazione dei dati digitali  in un contesto legale. Questa disciplina è utilizzata per investigare crimini informatici,  come la frode, il furto di dati o la diffusione di malware, e per recuperare e analizzare informazioni  da dispositivi elettronici come computer, smartphone e tablet. La digital forensics comprende  l'utilizzo di strumenti specializzati per analizzare i dati digitali e garantire la validità delle  prove in un contesto legale. Il lavoro dei professionisti della digital forensics è cruciale per  aiutare le agenzie investigative e i tribunali a identificare e punire i responsabili di crimini  informatici e garantire la giustizia.",
+    "SECTION_TITLE_CHAIN_OF_CUSTODY": "Catena di custodia",
+    "SECTION_DESCRIPTION_CHAIN_OF_CUSTODY": "La catena di custodia è un concetto importante in ambito forense che descrive il controllo e la documentazione degli spostamenti e delle manipolazioni di una prova durante un'indagine o un processo legale. La catena di custodia garantisce che la prova sia autentica, non alterata e non contaminata, e che la sua integrità sia mantenuta dal momento della raccolta fino all'utilizzo in tribunale. Mantenere una catena di custodia affidabile è fondamentale per garantire che la prova sia valida e adatta a supportare le conclusioni nell'ambito giudiziario.",
+    "SECTION_TITLE_HASHES": "Hash",
+    "SECTION_DESCRIPTION_HASHES": "Gli hash crittografici sono valori univoci che rappresentano i dati digitali e vengono utilizzati per verificare l'integrità e l'autenticità delle prove digitali. Un hash viene calcolato utilizzando un algoritmo di crittografia a sensi unici che trasforma i dati in una stringa di caratteri a lunghezza fissa. Se i dati originali vengono modificati, anche l'hash cambia, rendendo facile rilevare eventuali alterazioni. In un contesto legale, gli hash delle prove digitali vengono spesso utilizzati per verificare che i dati originali non siano stati alterati durante il processo di raccolta, conservazione e presentazione delle prove. Mantenere un record degli hash delle prove digitali contribuisce a garantire la loro integrità e ad assicurare che siano adatti a supportare le conclusioni in una causa legale.",
+    "SECTION_TITLE_WACZ": "Formato dei contenuti web acquisiti (WACZ)",
+    "SECTION_DESCRIPTION_WACZ": "I contenuti web acquisiti sono stati salvati nel formato WACZ.<br><br>WACZ (Web Archive Collection Zipped) è un formato standard per l’archiviazione di contenuti web, basato sul formato WARC (Web ARChive), definito dalla norma ISO/IEC 28500. Il formato WARC è comunemente utilizzato in ambito forense e archivistico per la conservazione strutturata delle risorse web acquisite, incluse le richieste e risposte HTTP, i contenuti multimediali e i relativi metadati.<br><br>Il formato WACZ consiste in un archivio compresso che include uno o più file WARC, insieme a indici e metadati che ne facilitano la consultazione e la verifica.<br><br>I file WACZ possono essere consultati mediante strumenti compatibili con gli standard WARC/WACZ, come ad esempio ReplayWeb.page (https://replayweb.page), che consente la visualizzazione locale dei contenuti archiviati.",
+    "SECTION_TITLE_GENERAL_INFORMATION": "Informazioni generali",
+    "TABLE_COLUMN_CASE_DATA": "Dati sul caso",
+    "TABLE_COLUMN_CASE_INFO": "Informazioni sul caso",
+    "TABLE_ROW_LABEL_CASE": "Cliente / Caso",
+    "TABLE_ROW_LABEL_LAWYER": "Avvocato",
+    "TABLE_ROW_LABEL_OPERATOR": "Operatore",
+    "TABLE_ROW_LABEL_PROCEEDING": "Tipo di procedimento",
+    "TABLE_ROW_LABEL_COURT": "Tribunale",
+    "TABLE_ROW_LABEL_PROCEEDING_NUMBER": "Numero di procedimento",
+    "SECTION_TITLE_SYSTEM_ARTIFACTS": "Artefatti di sistema",
+    "SECTION_DESCRIPTION_SYSTEM_ARTIFACTS": "Gli artefatti di sistema sono file generati automaticamente dall’infrastruttura FIT durante l’esecuzione dell’acquisizione, con finalità di documentazione tecnica, tracciabilità delle operazioni e verifica del corretto funzionamento dello strumento.<br>Tali file non rappresentano il contenuto oggetto diretto dell’acquisizione, ma costituiscono elementi di supporto forense, utili a descrivere il contesto operativo, l’ambiente di rete e le modalità con cui l’acquisizione è stata effettuata.",
+    "TABLE_COLUMN_FILE_NAME": "Nome del file",
+    "TABLE_COLUMN_FILE_DESCRIPTION": "Descrizione",
+    "TABLE_ROW_DESCRIPTION_REPORT":"File contenente il report finale generato a conclusione delle attività svolte.",
+    "TABLE_ROW_DESCRIPTION_TRACEROUTE": "File contenente il percorso di rete rilevato verso il dominio analizzato",
+    "TABLE_ROW_DESCRIPTION_SSLKEY_DESCRIPTION": "File contenente informazioni di sessione TLS generate durante l’attività di acquisizione",
+    "TABLE_ROW_DESCRIPTION_CER": "File contenente il certificato digitale del server relativo al dominio analizzato",
+    "TABLE_ROW_DESCRIPTION_NSLOOKUP": "File contenente il risultato dell’interrogazione DNS effettuata sul dominio analizzato",
+    "TABLE_ROW_DESCRIPTION_HEADERS": "File contenente Header HTTP relativo al dominio analizzato",
+    "TABLE_ROW_DESCRIPTION_WHOIS": "File contenente il risultato dell’interrogazione WHOIS relativa al dominio analizzato",
+    "TABLE_ROW_DESCRIPTION_ACQUISITION_ZIP": "File contenente i contenuti oggetto di acquisizione",
+    "TABLE_ROW_DESCRIPTION_LOG": "File contenente informazioni generate da FIT durante la sessione di acquisizione.",
+    "TABLE_ROW_DESCRIPTION_PCAP": "File contenente la registrazione del traffico di rete generato durante la sessione di acquisizione",
+    "TABLE_ROW_DESCRIPTION_CASE_INFORMATION": "File contenente informazioni relative al caso (avvocato, numero procedimento, logo,...) inserite manualmente dall’operatore.",
+    "TABLE_ROW_DESCRIPTION_SYSTEM_INFORMATION": "File contenente informazioni relative al sistema (IP, DNS, username,...) sul quale è stato eseguito FIT",
+    "TABLE_ROW_DESCRIPTION_TIMESTAMP_TSR":"File contenente le informazioni relative alla marca temporale (TSR), utilizzata per attestare la data e l’ora di riferimento dell’attività.",
+    "TABLE_ROW_DESCRIPTION_TSA_CERTIFICATE":"Certificato digitale della Time Stamping Authority (TSA), utilizzato per la verifica della validità della marca temporale.",
+    "TABLE_ROW_DESCRIPTION_PEC_EMAIL":"Messaggio di Posta Elettronica Certificata (PEC) salvato in formato EML.",
+    "TABLE_ROW_DESCRIPTION_HASH": "File contenente gli hash dei file",
+    "TABLE_ROW_DESCRIPTION_SCREEN_CAPTURE": "File contenente la registrazione video dell’attività svolta durante la sessione di acquisizione",
+    "SECTION_TITLE_ACQUIRED_CONTENT": "Contenuti oggetto di acquisizione",
+    "SECTION_DESCRIPTION_ACQUIRED_CONTENT": "I contenuti oggetto di acquisizione comprendono i dati digitali raccolti dal sistema FIT in seguito alle azioni di navigazione e selezione effettuate dall’operatore durante la sessione di acquisizione.<br>Tali contenuti rappresentano l’oggetto informativo di interesse dell’attività forense e consistono nella rappresentazione dei contenuti web visualizzati e consultati dall’operatore nel corso dell’acquisizione.",
+    "TABLE_ROW_DESCRIPTION_PAGE_SCREENSHOT": "File contenente lo screenshot integrale della pagina acquisita.",
+    "TABLE_ROW_DESCRIPTION_WACZ": "File WACZ contenente l’archiviazione della pagina web acquisita, comprensiva delle risorse associate.",
+    "TABLE_ROW_DESCRIPTION_MAIL_ACQUISITION": "Archivio compresso contenente i messaggi di posta elettronica acuisiti.",
+    "TABLE_ROW_DESCRIPTION_ACQUISITION_ARCHIVE": "Archivio contenente i file generati nel corso dell’attività di acquisizione.",
+    "TABLE_ROW_DESCRIPTION_SCREENSHOTS_ARCHIVE": "Archivio contenente gli screenshot acquisiti durante l’attività di acquisizione.",
+    "TABLE_ROW_DESCRIPTION_DOWNLOADS_ARCHIVE": "Archivio contenente i file scaricati nel corso della navigazione.",
+    "SECTION_TITLE_INTEGRITY_VERIFICATION": "Verifica dell’integrità dei file acquisiti mediante hash",
+    "SECTION_DESCRIPTION_INTEGRITY_VERIFICATION": "I file elencati nel presente paragrafo costituiscono gli elementi dell’acquisizione aventi rilevanza probatoria diretta; gli stessi sono stati sottoposti a calcolo di hash crittografici quale misura idonea a garantirne l’integrità e la corretta tracciabilità ai fini della catena di custodia.",
+    "SECTION_TITLE_DATA_OWNERSHIP_VERIFICATION": "Verifica titolarità dei dati",
+    "SECTION_DESCRIPTION_DATA_OWNERSHIP_VERIFICATION": "Nel corso dell'acquisizione, l'utente navigava alcuni siti web. FIT  procedeva alla verifica di ciascuna connessione mediante routine appositamente implementate.  In particolare, ai fini di stabilire la titolarità dei domini coinvolti, venivano indicate le  seguenti informazioni:",
+    "SECTION_TITLE_SCREENSHOTS": "Screenshot della pagina",
+    "SECTION_DESCRIPTION_SCREENSHOTS": "Di seguito sono riportati gli screenshot della pagina navigata durante l’attività di acquisizione.",
+    "SECTION_TITLE_VIDEO_ACQUISITION": "Acquisizione video",
+    "SECTION_DESCRIPTION_VIDEO_ACQUISITION": "Di seguito è riportato il collegamento alla registrazione video della sessione di acquisizione.",
+    "SECTION_TITLE_VERIFICATION" : "Verifica",
+    "SCREENSHOT_LINK_LABEL": "Screenshot dell'intera pagina",
+    "VIDEO_LINK_LABEL": "Link alla registrazione video",
     "ACQUISITION_DATE": "Data acquisizione",
     "ACQUISITION_TYPE": "Tipo di acquisizione",
-    "AVID": "Acquisizione video",
-    "CASE": "Cliente / Caso",
-    "CASEDATA": "Dati sul caso",
-    "CASEINFO": "Informazioni sul caso",
-    "CCDESCR": "La catena di custodia è un concetto importante in ambito forense che descrive il controllo e la documentazione degli spostamenti e delle manipolazioni di una prova durante un'indagine o un processo legale. La catena di custodia garantisce che la prova sia autentica, non alterata e non contaminata, e che la sua integrità sia mantenuta dal momento della raccolta fino all'utilizzo in tribunale. Mantenere una catena di custodia affidabile è fondamentale per garantire che la prova sia valida e adatta a supportare le conclusioni nell'ambito giudiziario.",
-    "CERD": "Certificato del server",
-    "COMPLETE_SCREENSHOT": "Screenshot dell'intera pagina",
-    "COURT": "Tribunale",
-    "DESCR": "Descrizione",
-    "DESCRIPTION": "FIT Project (Freezing Internet Tool) è una suite modulare di applicazioni sviluppate in linguaggio Python, progettata per l’acquisizione forense di contenuti disponibili online, quali pagine web, comunicazioni e-mail e contenuti provenienti da piattaforme di social media. La suite è composta da moduli indipendenti, ciascuno dedicato a uno specifico tipo di acquisizione, che possono essere eseguiti singolarmente oppure in modo integrato come parte dell’intero sistema.<br>FIT è un software FLOSS (Free/Libre and Open Source Software), il cui codice sorgente è pubblicamente disponibile e utilizzabile secondo i termini della relativa licenza open source. Tale caratteristica consente la verifica del funzionamento dello strumento, nonché la sua adattabilità alle specifiche esigenze operative del contesto forense. FIT può essere scaricato al seguente link: {}.<br><br>Nel contesto dell’informatica forense, uno strumento di acquisizione forense è un software progettato per la raccolta controllata di dati digitali da fonti informatiche o servizi online, con l’obiettivo di documentare contenuti e informazioni rilevanti per finalità di analisi tecnica o probatoria. In tale ambito, strumenti come FIT consentono di acquisire contenuti digitali preservandone il contesto e le informazioni accessorie, rendendo i dati raccolti verificabili e utilizzabili nell’ambito di attività investigative, consulenze tecniche o procedimenti legali.",
-    "WACZ_TITLE": "Formato dei contenuti web acquisiti (WACZ)",
-    "WACZ_DESCRIPTION": "I contenuti web acquisiti sono stati salvati nel formato WACZ.<br><br>WACZ (Web Archive Collection Zipped) è un formato standard per l’archiviazione di contenuti web, basato sul formato WARC (Web ARChive), definito dalla norma ISO/IEC 28500. Il formato WARC è comunemente utilizzato in ambito forense e archivistico per la conservazione strutturata delle risorse web acquisite, incluse le richieste e risposte HTTP, i contenuti multimediali e i relativi metadati.<br><br>Il formato WACZ consiste in un archivio compresso che include uno o più file WARC, insieme a indici e metadati che ne facilitano la consultazione e la verifica.<br><br>I file WACZ possono essere consultati mediante strumenti compatibili con gli standard WARC/WACZ, come ad esempio ReplayWeb.page (https://replayweb.page), che consente la visualizzazione locale dei contenuti archiviati.",
-    "HASHD": "File contenente gli hash dei file",
-    "HDESCR": "L'hash delle prove digitali è un valore univoco che rappresenta i dati digitali e che viene utilizzato per verificare l'integrità e l'autenticità delle prove. Un hash viene calcolato utilizzando un algoritmo di crittografia a sensi unici che trasforma i dati in una stringa di caratteri a lunghezza fissa. Se i dati originali vengono modificati, anche l'hash cambia, rendendo facile rilevare eventuali alterazioni. In un contesto legale, l'hash delle prove digitali viene spesso utilizzato per verificare che i dati originali non siano stati alterati durante il processo di raccolta, conservazione e presentazione delle prove. Mantenere un record dell'hash delle prove digitali contribuisce a garantire la loro integrità e ad assicurare che siano adatti a supportare le conclusioni in una causa legale.",
-    "HEADERSD": "Headers della richiesta",
     "INDEX": "Indice",
-    "LAWYER": "Avvocato",
-    "LOGD": "Informazioni generate dai vari componenti del sistema",
-    "NAME": "Nome del file",
     "NOTE": "Note",
     "NOT_GENERATED": "{} (non generato)",
     "EMPTY_FILE": "{} (0 byte)",
-    "NSLOOKUPD": "Record DNS",
-    "NUMBER": "Numero di procedimento",
     "OF": "di ",
-    "OPERATOR": "Operatore",
     "PAGE": "Pagina ",
-    "PCAPD": "Registrazione del traffico di rete",
-    "PROCEEDING": "Tipo di procedimento",
     "RELEASES_LINK": "<a href='https://github.com/fit-project/fit/releases'>Freezing Internet Tool - Releases</a>",
     "PROJECT_LINK": "<a href='http://fit-project.org'>FIT Project</a>",
-    "REPORT": "Report Freezing Internet Tool",
-    "SIZE": "Dimensione: ",
-    "SSLKEYD": "Chiavi SSL",
-    "T1": "Freezing Internet Tool",
-    "T2": "Informazioni generali",
-    "T3": "Verifica titolarità dei dati",
-    "T3DESCR": "Nel corso dell'acquisizione, l'utente navigava alcuni siti web. FIT  procedeva alla verifica di ciascuna connessione mediante routine appositamente implementate.  In particolare, ai fini di stabilire la titolarità dei domini coinvolti, venivano indicate le  seguenti informazioni:",
-    "T4": "Digital Forensics",
-    "T4DESCR": "La digital forensics è l'applicazione scientifica e tecnologica dei principi  forensi alla raccolta, conservazione, analisi e presentazione dei dati digitali  in un contesto legale. Questa disciplina è utilizzata per investigare crimini informatici,  come la frode, il furto di dati o la diffusione di malware, e per recuperare e analizzare informazioni  da dispositivi elettronici come computer, smartphone e tablet. La digital forensics comprende  l'utilizzo di strumenti specializzati per analizzare i dati digitali e garantire la validità delle  prove in un contesto legale. Il lavoro dei professionisti della digital forensics è cruciale per  aiutare le agenzie investigative e i tribunali a identificare e punire i responsabili di crimini  informatici e garantire la giustizia.",
-    "T5": "File prodotti dal sistema",
-    "T5DESCR": "Durante l'acquisizione, il sistema ha prodotto una serie di file  come screenshot, video dell'intera navigazione, log del traffico di rete, ecc., identificati  nella seguente tabella.",
-    "T6": "Hash dei file prodotti dal sistema",
-    "T6DESCR": "Ogni file prodotto dall'infrastruttura viene validato mediante il calcolo degli hash. Con questa procedura, ogni singolo file prodotto è immodificabile e può essere fornito anche singolarmente mantenendo la validità della Catena di Custodia",
-    "T7": "File prodotti dall'utente",
-    "T7DESCR": "Tutti i file prodotti dall'utente durante l'acquisizione sono raccolti all'interno  della cartella compressa avente estensione .zip. Per ognuno di questi file viene riportata  la dimensione espressa in bytes.",
-    "T8": "Screenshot della pagina",
-    "T8DESCR": "Vengono di seguito riportati gli screenshot della pagina navigata durante l'acquisizione.",
-    "T9": "Acquisizione video",
-    "T9DESCR": "Viene di seguito riportato l'hyperlink alla registrazione video.",
-    "TITLE": "FIT",
-    "TITLECC": "La Catena di Custodia",
-    "TITLEH": "Hash",
-    "TRACEROUTED": "Traceroute dei pacchetti",
-    "VIDEO_LINK": "Link al video",
-    "WHOISD": "File whois",
-    "ZIPD": "Archivio contenente l'acquisizione",
+    "SIZE": "Dimensione: ",    
     "SAVE_CASE_INFO": "Salva informazioni del caso su file json",
     "SAVE_CASE_INFO_STARTED": "Salvataggio informazioni del caso su file json iniziata",
     "SAVE_CASE_INFO_COMPLETED": "{}: Salvataggio informazioni del caso su file json completata",
