chore(i18n): align report localization schema and sync lockfile updates
- migrate `en.json` from legacy report keys to the new structured keys (`DOCUMENT_*`, `SECTION_*`, `TABLE_*`) and add full English translations
- align localization key names used by the code (`WHOIS_DNS_RESOLUTON_ERROR`, `SSLCERTIFICATE_CONNECTION_ERROR`) across language files
- refine Italian report strings for general info, SSL key log label, and acquired content description wording
- update `poetry.lock` with refreshed dependency versions and git resolved references (`cryptography`, `fit-assets`, `fit-common`)

--- a/fit_acquisition/lang/en.json
+++ b/fit_acquisition/lang/en.json
@@ -64,7 +64,7 @@
     "WHOIS_COMPLETED": "WHOIS completed",
     "WHOIS_GET_INFO_URL": "{}: Get WHOIS info for URL: {}",
     "WHOIS_ERROR_TITLE": "WHOIS error",
-    "WHOIS_DNS_RESOLUTION_ERROR": "DNS resolution error\nSee below for more details.",
+    "WHOIS_DNS_RESOLUTON_ERROR": "DNS resolution error\nSee below for more details.",
     "WHOIS_INVALID_DOMAIN_ERROR": "Invalid domain or domain extraction failed.",
     "WHOIS_EXECUTION_ERROR": "Error during WHOIS execution!\nSee bellow for more detail.",
     "HASHFILE": "Calculate HASH of the acquired files",
@@ -87,65 +87,78 @@
     "FIT_DNS": "DNS Servers",
     "FIT_MITM_PORT": "MITM Port",
     "FIT_USER_SYSTEM_LANG": "System Language",
-    "ACQUISITION_DATE": "Acquisition Date",
-    "ACQUISITION_TYPE": "Acquisition Type",
-    "AVID": "Video Acquisition",
-    "CASE": "Client / Case",
-    "CASEDATA": "Case Data",
-    "CASEINFO": "Case Information",
-    "CCDESCR": "The chain of custody is an important concept in forensic science that describes the control and documentation of the movement and handling of evidence during an investigation or legal process. The chain of custody ensures that the evidence is authentic, unaltered, and uncontaminated, and that its integrity is maintained from the moment of collection until its use in court. Maintaining a reliable chain of custody is essential to ensure that the evidence is valid and suitable to support conclusions in a legal context.",
-    "CERD": "Server Certificate",
-    "COMPLETE_SCREENSHOT": "Full screenshot",
-    "COURT": "Court",
-    "DESCR": "Description",
-    "DESCRIPTION": "FIT Project (Freezing Internet Tool) is a modular suite of applications developed in the Python programming language, designed for the forensic acquisition of online content such as web pages, email communications, and content from social media platforms. The suite consists of independent modules, each dedicated to a specific type of acquisition, which can be executed individually or in an integrated manner as part of the overall system.<br>FIT is a FLOSS (Free/Libre and Open Source Software) tool, whose source code is publicly available and usable in accordance with the terms of the applicable open source license. This characteristic allows the verification of the tool’s behavior and its adaptability to the specific operational requirements of the forensic context. FIT can be downloaded at the following link: {}.<br><br>In the field of digital forensics, a forensic acquisition tool is software designed for the controlled collection of digital data from information systems or online services, with the purpose of documenting content and information relevant for technical analysis or evidentiary use. In this context, tools such as FIT enable the acquisition of digital content while preserving its context and associated information, making the collected data verifiable and suitable for use in investigative activities, technical consulting, or legal proceedings.",
-    "WACZ_TITLE": "Format of the acquired web content (WACZ)",
-    "WACZ_DESCRIPTION": "The acquired web content has been saved in the WACZ format.<br><br>WACZ (Web Archive Collection Zipped) is a standard format for the archiving of web content, based on the WARC (Web ARChive) format, as defined by the ISO/IEC 28500 standard. The WARC format is commonly used in forensic and archival contexts for the structured preservation of acquired web resources, including HTTP requests and responses, multimedia content, and related metadata.<br><br>The WACZ format consists of a compressed archive that includes one or more WARC files, together with indexes and metadata that facilitate consultation and verification.<br><br>WACZ files can be consulted using tools compatible with the WARC/WACZ standards, such as ReplayWeb.page (https://replayweb.page), which allows local visualization of the archived content.",
-    "HASHD": "File Containing Hashes of Files",
-    "HDESCR": "The hash of digital evidence is a unique value that represents digital data and is used to verify the integrity and authenticity of the evidence. A hash is calculated using a one-way cryptographic algorithm that transforms data into a fixed-length character string. If the original data is modified, the hash also changes, making it easy to detect any alterations. In a legal context, the hash of digital evidence is often used to verify that the original data has not been altered during the process of collecting, preserving, and presenting the evidence. Maintaining a record of the hash of digital evidence helps ensure its integrity and ensures that it is suitable to support conclusions in a legal case.",
-    "HEADERSD": "Request Headers",
+    "DOCUMENT_TITLE": "Freezing Internet Tool",
+    "APPLICATION_SHORT_NAME": "FIT",
+    "DOCUMENT_SUBTITLE": "Freezing Internet Tool Report",
+    "SECTION_DESCRIPTION_FIT_APPLICATION": "FIT Project (Freezing Internet Tool) is a modular suite of applications developed in the Python programming language, designed for the forensic acquisition of online content such as web pages, email communications, and content from social media platforms. The suite consists of independent modules, each dedicated to a specific type of acquisition, which can be run individually or in an integrated manner as part of the overall system.<br>FIT is a FLOSS (Free/Libre and Open Source Software) tool, whose source code is publicly available and usable in accordance with the terms of the applicable open source license. This feature allows verification of the tool's behavior, as well as its adaptability to the specific operational needs of the forensic context. FIT can be downloaded from the following link: {}.<br><br>In digital forensics, a forensic acquisition tool is software designed for the controlled collection of digital data from information systems or online services, with the aim of documenting content and information relevant for technical analysis or evidentiary purposes. In this context, tools such as FIT make it possible to acquire digital content while preserving its context and related information, making the collected data verifiable and usable in investigative activities, technical consulting, or legal proceedings.",
+    "SECTION_TITLE_DIGITAL_FORENSICS": "Digital Forensics",
+    "SECTION_DESCRIPTION_DIGITAL_FORENSICS": "Digital forensics is the scientific and technological application of forensic principles to the collection, preservation, analysis, and presentation of digital data in a legal context. This discipline is used to investigate cybercrimes, such as fraud, data theft, or malware distribution, and to recover and analyze information from electronic devices such as computers, smartphones, and tablets. Digital forensics includes the use of specialized tools to analyze digital data and ensure the validity of evidence in a legal context. The work of digital forensics professionals is crucial in helping investigative agencies and courts identify and punish those responsible for cybercrimes and ensure justice.",
+    "SECTION_TITLE_CHAIN_OF_CUSTODY": "Chain of Custody",
+    "SECTION_DESCRIPTION_CHAIN_OF_CUSTODY": "The chain of custody is an important concept in forensics that describes the control and documentation of the movement and handling of evidence during an investigation or legal process. The chain of custody ensures that evidence is authentic, unaltered, and uncontaminated, and that its integrity is maintained from the moment it is collected until it is used in court. Maintaining a reliable chain of custody is essential to ensure that evidence is valid and suitable to support conclusions in a legal context.",
+    "SECTION_TITLE_HASHES": "Hashes",
+    "SECTION_DESCRIPTION_HASHES": "Cryptographic hashes are unique values that represent digital data and are used to verify the integrity and authenticity of digital evidence. A hash is calculated using a one-way cryptographic algorithm that transforms data into a fixed-length string of characters. If the original data is modified, the hash changes as well, making any alteration easy to detect. In a legal context, hashes of digital evidence are often used to verify that the original data has not been altered during the collection, preservation, and presentation process. Keeping a record of hashes helps ensure the integrity of digital evidence and that it is suitable to support conclusions in legal proceedings.",
+    "SECTION_TITLE_WACZ": "Format of Acquired Web Content (WACZ)",
+    "SECTION_DESCRIPTION_WACZ": "The acquired web content has been saved in WACZ format.<br><br>WACZ (Web Archive Collection Zipped) is a standard format for archiving web content, based on the WARC (Web ARChive) format defined by ISO/IEC 28500. The WARC format is commonly used in forensic and archival contexts for the structured preservation of acquired web resources, including HTTP requests and responses, multimedia content, and related metadata.<br><br>The WACZ format consists of a compressed archive that includes one or more WARC files, along with indexes and metadata that make consultation and verification easier.<br><br>WACZ files can be viewed using tools compatible with WARC/WACZ standards, such as ReplayWeb.page (https://replayweb.page), which enables local viewing of archived content.",
+    "SECTION_TITLE_GENERAL_INFORMATION": "General case information",
+    "TABLE_COLUMN_CASE_DATA": "Case data",
+    "TABLE_COLUMN_CASE_INFO": "Case information",
+    "TABLE_ROW_LABEL_CASE": "Client / Case",
+    "TABLE_ROW_LABEL_LAWYER": "Lawyer",
+    "TABLE_ROW_LABEL_OPERATOR": "Operator",
+    "TABLE_ROW_LABEL_PROCEEDING": "Proceeding type",
+    "TABLE_ROW_LABEL_COURT": "Court",
+    "TABLE_ROW_LABEL_PROCEEDING_NUMBER": "Proceeding number",
+    "SECTION_TITLE_SYSTEM_ARTIFACTS": "System artifacts",
+    "SECTION_DESCRIPTION_SYSTEM_ARTIFACTS": "System artifacts are files automatically generated by the FIT infrastructure during the acquisition process for technical documentation, operation traceability, and verification of proper tool behavior.<br>These files do not represent the direct target content of the acquisition, but they are forensic support elements useful for describing the operational context, network environment, and the way the acquisition was performed.",
+    "TABLE_COLUMN_FILE_NAME": "File name",
+    "TABLE_COLUMN_FILE_DESCRIPTION": "Description",
+    "TABLE_ROW_DESCRIPTION_REPORT": "File containing the final report generated at the end of the performed activities.",
+    "TABLE_ROW_DESCRIPTION_TRACEROUTE": "File containing the detected network path to the analyzed domain",
+    "TABLE_ROW_DESCRIPTION_SSLKEYLOG": "File containing TLS session information generated during the acquisition activity",
+    "TABLE_ROW_DESCRIPTION_CER": "File containing the server's digital certificate for the analyzed domain",
+    "TABLE_ROW_DESCRIPTION_NSLOOKUP": "File containing the result of the DNS query performed on the analyzed domain",
+    "TABLE_ROW_DESCRIPTION_HEADERS": "File containing HTTP headers for the analyzed domain",
+    "TABLE_ROW_DESCRIPTION_WHOIS": "File containing the result of the WHOIS query for the analyzed domain",
+    "TABLE_ROW_DESCRIPTION_ACQUISITION_ZIP": "File containing the acquired content",
+    "TABLE_ROW_DESCRIPTION_LOG": "File containing information generated by FIT during the acquisition session.",
+    "TABLE_ROW_DESCRIPTION_PCAP": "File containing the recording of network traffic generated during the acquisition session",
+    "TABLE_ROW_DESCRIPTION_CASE_INFORMATION": "File containing case information (lawyer, proceeding number, logo, ...) manually entered by the operator.",
+    "TABLE_ROW_DESCRIPTION_SYSTEM_INFORMATION": "File containing system information (IP, DNS, username, ...) of the machine where FIT was run",
+    "TABLE_ROW_DESCRIPTION_TIMESTAMP_TSR": "File containing time-stamp (TSR) information used to certify the reference date and time of the activity.",
+    "TABLE_ROW_DESCRIPTION_TSA_CERTIFICATE": "Digital certificate of the Time Stamping Authority (TSA), used to verify the validity of the time-stamp.",
+    "TABLE_ROW_DESCRIPTION_PEC_EMAIL": "Certified Email (PEC) message saved in EML format.",
+    "TABLE_ROW_DESCRIPTION_HASH": "File containing file hashes",
+    "TABLE_ROW_DESCRIPTION_SCREEN_CAPTURE": "File containing the video recording of activities performed during the acquisition session",
+    "SECTION_TITLE_ACQUIRED_CONTENT": "Acquired content",
+    "SECTION_DESCRIPTION_ACQUIRED_CONTENT": "The acquired content includes digital data collected by the FIT system following navigation and selection actions performed by the operator during the acquisition session.<br>This content represents the information object of forensic interest and consists of the representation of content viewed and consulted by the operator during the acquisition.",
+    "TABLE_ROW_DESCRIPTION_PAGE_SCREENSHOT": "File containing the full-page screenshot of the acquired page.",
+    "TABLE_ROW_DESCRIPTION_WACZ": "WACZ file containing the archived acquired web page, including associated resources.",
+    "TABLE_ROW_DESCRIPTION_MAIL_ACQUISITION": "Compressed archive containing acquired email messages.",
+    "TABLE_ROW_DESCRIPTION_ACQUISITION_ARCHIVE": "Archive containing files generated during the acquisition activity.",
+    "TABLE_ROW_DESCRIPTION_SCREENSHOTS_ARCHIVE": "Archive containing screenshots captured during the acquisition activity.",
+    "TABLE_ROW_DESCRIPTION_DOWNLOADS_ARCHIVE": "Archive containing files downloaded during browsing.",
+    "SECTION_TITLE_INTEGRITY_VERIFICATION": "Integrity verification of acquired files using hashes",
+    "SECTION_DESCRIPTION_INTEGRITY_VERIFICATION": "The files listed in this section constitute the acquisition elements with direct evidentiary relevance; they were subjected to cryptographic hash calculation as a suitable measure to ensure integrity and proper traceability for chain-of-custody purposes.",
+    "SECTION_TITLE_DATA_OWNERSHIP_VERIFICATION": "Data ownership verification",
+    "SECTION_DESCRIPTION_DATA_OWNERSHIP_VERIFICATION": "During the acquisition, the user browsed some websites. FIT verified each connection through specifically implemented routines. In particular, in order to establish ownership of the involved domains, the following information was provided:",
+    "SECTION_TITLE_SCREENSHOTS": "Page screenshots",
+    "SECTION_DESCRIPTION_SCREENSHOTS": "Below are the screenshots of the page browsed during the acquisition activity.",
+    "SECTION_TITLE_VIDEO_ACQUISITION": "Video acquisition",
+    "SECTION_DESCRIPTION_VIDEO_ACQUISITION": "Below is the link to the video recording of the acquisition session.",
+    "SECTION_TITLE_VERIFICATION": "Verification",
+    "SCREENSHOT_LINK_LABEL": "Full-page screenshot",
+    "VIDEO_LINK_LABEL": "Link to video recording",
+    "ACQUISITION_DATE": "Acquisition date",
+    "ACQUISITION_TYPE": "Acquisition type",
     "INDEX": "Index",
-    "LAWYER": "Lawyer",
-    "LOGD": "Information Generated by System Components",
-    "NAME": "File Name",
     "NOTE": "Note",
     "NOT_GENERATED": "{} (not generated)",
     "EMPTY_FILE": "{} (0 byte)",
-    "NSLOOKUPD": "DNS Records",
-    "NUMBER": "Proceeding Number",
     "OF": "of ",
-    "OPERATOR": "Operator",
     "PAGE": "Page ",
-    "PCAPD": "Network Traffic Recording",
-    "PROCEEDING": "Proceeding Type",
     "RELEASES_LINK": "<a href='https://github.com/fit-project/fit/releases'>Freezing Internet Tool - Releases</a>",
-    "PROJECT_LINK": "<a href='http://fit-project.org'>Freezing Internet Tool - Project</a>",
-    "REPORT": "Freezing Internet Tool Report",
+    "PROJECT_LINK": "<a href='http://fit-project.org'>FIT Project</a>",
     "SIZE": "Size: ",
-    "SSLKEYD": "SSL Keys",
-    "T1": "Freezing Internet Tool",
-    "T2": "General Information",
-    "T3": "Data Ownership Verification",
-    "T3DESCR": "During the acquisition, the user browsed various websites. FIT performed verification for each connection using  specially implemented routines. In particular, the following information was provided to determine the ownership  of the involved domains:",
-    "T4": "Digital Forensics",
-    "T4DESCR": "Digital forensics is the scientific and technological application of forensic principles to the collection,  preservation, analysis, and presentation of digital data in a legal context. This discipline is used to investigate  cybercrimes such as fraud, data theft, or malware dissemination, and to recover and analyze information from  electronic devices such as computers, smartphones, and tablets. Digital forensics involves the use of specialized  tools to analyze digital data and ensure the validity of evidence in a legal context. The work of digital forensics  professionals is crucial in assisting investigative agencies and courts in identifying and punishing cybercriminals  and ensuring justice.",
-    "T5": "Files Produced by the System",
-    "T5DESCR": "During the acquisition, the system produced a series of files such as screenshots, videos of the entire browsing session,  network traffic logs, etc., identified in the following table.",
-    "T6": "Hash of Files Produced by the System",
-    "T6DESCR": "Each file produced by the infrastructure is validated by calculating its hash.",
-    "T7": "Files Produced by the User",
-    "T7DESCR": "All files produced by the user during the acquisition are collected within a compressed folder with the .zip extension.  For each of these files, the size is reported in bytes.",
-    "T8": "Page Screenshot",
-    "T8DESCR": "The screenshots of the page visited during the acquisition are displayed below.",
-    "T9": "Video acquisition",
-    "T9DESCR": "Below is the hyperlink to the video recording.",
-    "TITLE": "FIT",
-    "TITLECC": "Chain of Custody",
-    "TITLEH": "Hash",
-    "TRACEROUTED": "Packet Traceroute",
-    "VIDEO_LINK": "Link to the video",
-    "WHOISD": "Whois File",
-    "ZIPD": "Archive Containing the Acquisition",
     "SAVE_CASE_INFO": "Save case information on json file",
     "SAVE_CASE_INFO_STARTED": "Save case information started",
     "SAVE_CASE_INFO_COMPLETED":"{}: Save case information completed",
