--- a/fit_acquisition/lang/it.json
+++ b/fit_acquisition/lang/it.json
@@ -47,7 +47,7 @@
     "SSLCERTIFICATE_NOT_EXIST": "Il CERTIFICATO SSL non esiste sull'URL: {}",
     "SSLCERTIFICATE_ERROR_TITLE": "Errore CERTIFICATO SSL",
     "SSLCERTIFICATE_ERROR_CHECK": "Errore durante il controllo del CERTIFICATO SSL.",
-    "SSL_CERTIFICATE_CONNECTION_ERROR": "Errore nella connessione SSL o nella ricezione del certificato.",
+    "SSLCERTIFICATE_CONNECTION_ERROR": "Errore nella connessione SSL o nella ricezione del certificato.",
     "SSLCERTIFICATE_SAVING_CERTIFICATE_ERROR": "Eccezione durante il salvataggio del certificato SSL!\nDi seguito maggiori dettagli.",
     "SSLKEYLOG": "Log delle chiavi SSL",
     "SSLKEYLOG_STARTED": "Inizio acquisizione SSLKEYLOG",
@@ -99,7 +99,7 @@
     "SECTION_DESCRIPTION_HASHES": "Gli hash crittografici sono valori univoci che rappresentano i dati digitali e vengono utilizzati per verificare l'integrità e l'autenticità delle prove digitali. Un hash viene calcolato utilizzando un algoritmo di crittografia a sensi unici che trasforma i dati in una stringa di caratteri a lunghezza fissa. Se i dati originali vengono modificati, anche l'hash cambia, rendendo facile rilevare eventuali alterazioni. In un contesto legale, gli hash delle prove digitali vengono spesso utilizzati per verificare che i dati originali non siano stati alterati durante il processo di raccolta, conservazione e presentazione delle prove. Mantenere un record degli hash delle prove digitali contribuisce a garantire la loro integrità e ad assicurare che siano adatti a supportare le conclusioni in una causa legale.",
     "SECTION_TITLE_WACZ": "Formato dei contenuti web acquisiti (WACZ)",
     "SECTION_DESCRIPTION_WACZ": "I contenuti web acquisiti sono stati salvati nel formato WACZ.<br><br>WACZ (Web Archive Collection Zipped) è un formato standard per l’archiviazione di contenuti web, basato sul formato WARC (Web ARChive), definito dalla norma ISO/IEC 28500. Il formato WARC è comunemente utilizzato in ambito forense e archivistico per la conservazione strutturata delle risorse web acquisite, incluse le richieste e risposte HTTP, i contenuti multimediali e i relativi metadati.<br><br>Il formato WACZ consiste in un archivio compresso che include uno o più file WARC, insieme a indici e metadati che ne facilitano la consultazione e la verifica.<br><br>I file WACZ possono essere consultati mediante strumenti compatibili con gli standard WARC/WACZ, come ad esempio ReplayWeb.page (https://replayweb.page), che consente la visualizzazione locale dei contenuti archiviati.",
-    "SECTION_TITLE_GENERAL_INFORMATION": "Informazioni generali",
+    "SECTION_TITLE_GENERAL_INFORMATION": "Informazioni generali sul caso",
     "TABLE_COLUMN_CASE_DATA": "Dati sul caso",
     "TABLE_COLUMN_CASE_INFO": "Informazioni sul caso",
     "TABLE_ROW_LABEL_CASE": "Cliente / Caso",
@@ -114,7 +114,7 @@
     "TABLE_COLUMN_FILE_DESCRIPTION": "Descrizione",
     "TABLE_ROW_DESCRIPTION_REPORT":"File contenente il report finale generato a conclusione delle attività svolte.",
     "TABLE_ROW_DESCRIPTION_TRACEROUTE": "File contenente il percorso di rete rilevato verso il dominio analizzato",
-    "TABLE_ROW_DESCRIPTION_SSLKEY_DESCRIPTION": "File contenente informazioni di sessione TLS generate durante l’attività di acquisizione",
+    "TABLE_ROW_DESCRIPTION_SSLKEYLOG": "File contenente informazioni di sessione TLS generate durante l’attività di acquisizione",
     "TABLE_ROW_DESCRIPTION_CER": "File contenente il certificato digitale del server relativo al dominio analizzato",
     "TABLE_ROW_DESCRIPTION_NSLOOKUP": "File contenente il risultato dell’interrogazione DNS effettuata sul dominio analizzato",
     "TABLE_ROW_DESCRIPTION_HEADERS": "File contenente Header HTTP relativo al dominio analizzato",
@@ -130,7 +130,7 @@
     "TABLE_ROW_DESCRIPTION_HASH": "File contenente gli hash dei file",
     "TABLE_ROW_DESCRIPTION_SCREEN_CAPTURE": "File contenente la registrazione video dell’attività svolta durante la sessione di acquisizione",
     "SECTION_TITLE_ACQUIRED_CONTENT": "Contenuti oggetto di acquisizione",
-    "SECTION_DESCRIPTION_ACQUIRED_CONTENT": "I contenuti oggetto di acquisizione comprendono i dati digitali raccolti dal sistema FIT in seguito alle azioni di navigazione e selezione effettuate dall’operatore durante la sessione di acquisizione.<br>Tali contenuti rappresentano l’oggetto informativo di interesse dell’attività forense e consistono nella rappresentazione dei contenuti web visualizzati e consultati dall’operatore nel corso dell’acquisizione.",
+    "SECTION_DESCRIPTION_ACQUIRED_CONTENT": "I contenuti oggetto di acquisizione comprendono i dati digitali raccolti dal sistema FIT in seguito alle azioni di navigazione e selezione effettuate dall’operatore durante la sessione di acquisizione.<br>Tali contenuti rappresentano l’oggetto informativo di interesse dell’attività forense e consistono nella rappresentazione dei contenuti visualizzati e consultati dall’operatore nel corso dell’acquisizione.",
     "TABLE_ROW_DESCRIPTION_PAGE_SCREENSHOT": "File contenente lo screenshot integrale della pagina acquisita.",
     "TABLE_ROW_DESCRIPTION_WACZ": "File WACZ contenente l’archiviazione della pagina web acquisita, comprensiva delle risorse associate.",
     "TABLE_ROW_DESCRIPTION_MAIL_ACQUISITION": "Archivio compresso contenente i messaggi di posta elettronica acuisiti.",
